[package]
name = "chat-rust-tokio"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
tokio-tungstenite = "*"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3.26"
log = "0.4.17"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
